# my_clion_project

./: Analyzers.cpp  Analyzers.h  CMakeLists.txt  CerealRegistrations.cpp  Circuit.cpp  Circuit.h  Element.cpp  Element.h  ErrorManager.cpp  ErrorManager.h  GUI.cpp  GUI.h  GraphExtractor.cpp  GraphExtractor.h  InputParser.cpp  InputParser.h  MNA_SYSTEM_README.md  Menu.cpp  Menu.h  Node.cpp  Node.h  PIN_WIRING_README.md  Pin.cpp  Pin.h  PlotCursor.cpp  PlotCursor.h  Plotter.cpp  Plotter.h  Probe.cpp  Probe.h  ProbeManager.cpp  ProbeManager.h  ProjectSerializer.cpp  ProjectSerializer.h  README.md  SignalProcessor.cpp  SignalProcessor.h  Solvers.cpp  Solvers.h  TcpSocket.cpp  (+10 more)
